--- a/docs/becerra_emanuel_CARLv2.1.tex
+++ b/docs/becerra_emanuel_CARLv2.1.tex
@@ -88,6 +88,10 @@
 {\pagestyle{empty}\pagenumbering{roman}}%
 {\pagenumbering{arabic}}
 
+% Don't  print apage number
+\newenvironment{dontprintpage}
+{\thispagestyle{empty}}
+
 %  Turns off hyphenation of words across multiple lines
 \usepackage[none]{hyphenat}
 % Removes section headings from the top of pages
@@ -128,58 +132,27 @@
 
 \begin{preliminary}
 
-\includepdf[pages=1, pagecommand={}]{pages/01_cover.pdf}
+% Cover
+% Include cover here 
 
-% Empty page
-\newpage
-\thispagestyle{empty}
-\mbox{}
-\newpage
-
-\includepdf[pages=1, pagecommand={}]{pages/02_cover2.pdf}
-
-% Empty page
-\newpage
-\thispagestyle{empty}
-\mbox{}
-\newpage
-
-\includepdf[pages=1, pagecommand={}]{pages/03_title.pdf}
+\includepdf[pages=1, pagecommand={}]{pages/SIP14.pdf}
 
 \includepdf[pages=1, pagecommand={}]{pages/copyright.pdf}
-
-\newpage
-
-\begin{flushleft}   
-	\LARGE{\say{\emph{All of what we mean by goals and purposes can be well thought of as the maximization of the expected value of the cumulative sum of a received scalar signal.}}}
-	\begin{flushright}
-		\Large{Richard S. Sutton \& Andrew G. Barto}
-	\end{flushright}
-\end{flushleft}
-
-\begin{flushleft}
-	\LARGE{\say{\emph{I prefer to eat a cake with a lot of cherries because I like reinforcement learning.}}}
-	\begin{flushright}
-		\Large{Pieter Abbeel}
-	\end{flushright}
-\end{flushleft}
-
-\newpage
 
 \end{preliminary}
 
 \setstretch{1.5}
-\hypertarget{abstract}{%
-\chapter*{Abstract}\label{abstract}}
-\addcontentsline{toc}{chapter}{Abstract}
-
-\textbf{\large{The recent field of Deep Reinforcement Learning promises a new class of general algorithms capable of learning from real or simulated world interactions. Hence the field popularity has exploded in the last years. Despite its potential, real world concrete applications are lacking. This document proposes a novel Reinforcement Learning environment based on Cellular Automata, which are quintessential models of complex systems. Particularly a Forest Fire Cellular Automata was used as underlying dynamics for an agent that can affect the grid configuration by changing fire cells to empty cells. The semantics are those of a \say{Helicopter} trying to extinguishing a wild fire. We applied Deep Q-networks to solve the proposed environment on a $3 \times 3$ grid. We evaluate our agent on a 100,000 steps simulation of the environment. Our results show that Cellular Automata can be used as benchmark for Reinforcement Learning algorithms, likewise its modeling capabilities could help to narrow the gap to real world applications.}}
-
 \hypertarget{resumen}{%
 \chapter*{Resumen}\label{resumen}}
 \addcontentsline{toc}{chapter}{Resumen}
 
 \textbf{\large{El novedoso campo del Aprendizaje Profundo por Refuerzo promete una nueva clase de algoritmos generales capaces de aprender directamente de interacciones con el mundo, ya sean reales o simuladas. Debido a esto la popularidad de este campo ha crecido en los últimos años. A pesar de su enorme potencial, aún faltan aplicaciones concretas en la vida real. En este documento se propone un nuevo ambiente de Aprendizaje por Refuerzo basado en Autómatas Celulares, los cuales son ejemplos característicos de sistemas complejos. Particularmente se usó el Autómata Celular de Incendios Forestales como la dinámica subyacente para un agente, el cual afecta la cuadrícula cambiando celdas tipo fuego por celdas tipo vacías. La semántica corresponde a la de un \say{Helicóptero} tratando de apagar un incendio forestal. Para tratar de resolver el ambiente propuesto se empleó el algoritmo de \emph{Deep Q-networks} sobre una cuadrícula de $3 \times 3$. El agente fue evaluado durante 100,000 pasos de una simulación del ambiente. Nuestros resultados muestran que los Autómatas Celulares pueden ser usados como punto de referencia para algoritmos de Aprendizaje por Refuerzo, además el uso de Autómatas Celulares, por sus capacidades de modelado, podría reducir la brecha entre simulación y aplicación a la vida real.}}
+
+\hypertarget{abstract}{%
+\chapter*{Abstract}\label{abstract}}
+\addcontentsline{toc}{chapter}{Abstract}
+
+\textbf{\large{The recent field of Deep Reinforcement Learning promises a new class of general algorithms capable of learning from real or simulated world interactions. Hence the field popularity has exploded in the last years. Despite its potential, real world concrete applications are lacking. This document proposes a novel Reinforcement Learning environment based on Cellular Automata, which are quintessential models of complex systems. Particularly a Forest Fire Cellular Automata was used as underlying dynamics for an agent that can affect the grid configuration by changing fire cells to empty cells. The semantics are those of a \say{Helicopter} trying to extinguishing a wild fire. We applied Deep Q-networks to solve the proposed environment on a $3 \times 3$ grid. We evaluate our agent on a 100,000 steps simulation of the environment. Our results show that Cellular Automata can be used as benchmark for Reinforcement Learning algorithms, likewise its modeling capabilities could help to narrow the gap to real world applications.}}
 
 \hypertarget{acknowledgments}{%
 \chapter*{Acknowledgments}\label{acknowledgments}}
@@ -239,6 +212,10 @@ POMDP & Partially Observable Markov Decision Process\\
 RL & Reinforcement Learning\\
 \bottomrule
 \end{tabular}
+
+\begin{dontprintpage}
+\includepdf[pages=1, pagecommand={}]{pages/01_cover.pdf}
+\end{dontprintpage}
 
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
@@ -1039,7 +1016,7 @@ The obtained \emph{return}, per experiment, from interacting with the environmen
 
 \begin{table}
 
-\caption{\label{tab:hyper}Comparision of obtained returns from the nine runs. The return was computed from playing 100,000 steps per run following the learned policy. The runs are ordered from best to worst and are named from $a$ to $i$, the "heuristic" and "random" baselines are marked as "H" and "R" respectively.}
+\caption{\label{tab:hyper}Comparison of obtained returns from the nine runs. The return was computed from playing 100,000 steps per run following the learned policy. The runs are ordered from best to worst and are named from $a$ to $i$, the "heuristic" and "random" baselines are marked as "H" and "R" respectively.}
 \centering
 \resizebox{\linewidth}{!}{
 \begin{tabular}[t]{lrlrlrrr}
