--- a/parameters/preface.tex
+++ b/parameters/preface.tex
@@ -1,41 +1,10 @@
 \begin{preliminary}
 
-\includepdf[pages=1, pagecommand={}]{pages/01_cover.pdf}
+% Cover
+% Include cover here 
 
-% Empty page
-\newpage
-\thispagestyle{empty}
-\mbox{}
-\newpage
-
-\includepdf[pages=1, pagecommand={}]{pages/02_cover2.pdf}
-
-% Empty page
-\newpage
-\thispagestyle{empty}
-\mbox{}
-\newpage
-
-\includepdf[pages=1, pagecommand={}]{pages/03_title.pdf}
+\includepdf[pages=1, pagecommand={}]{pages/SIP14.pdf}
 
 \includepdf[pages=1, pagecommand={}]{pages/copyright.pdf}
-
-\newpage
-
-\begin{flushleft}   
-	\LARGE{\say{\emph{All of what we mean by goals and purposes can be well thought of as the maximization of the expected value of the cumulative sum of a received scalar signal.}}}
-	\begin{flushright}
-		\Large{Richard S. Sutton \& Andrew G. Barto}
-	\end{flushright}
-\end{flushleft}
-
-\begin{flushleft}
-	\LARGE{\say{\emph{I prefer to eat a cake with a lot of cherries because I like reinforcement learning.}}}
-	\begin{flushright}
-		\Large{Pieter Abbeel}
-	\end{flushright}
-\end{flushleft}
-
-\newpage
 
 \end{preliminary}
