--- a/parameters/preface.tex
+++ b/parameters/preface.tex
@@ -1,7 +1,6 @@
 \begin{preliminary}
 
-% Cover
-% Include cover here 
+\includepdf[pages=1, pagecommand={}]{pages/cover.pdf}
 
 \includepdf[pages=1, pagecommand={}]{pages/SIP14.pdf}
 
