--- a/parameters/preamble.tex
+++ b/parameters/preamble.tex
@@ -19,8 +19,8 @@
 {\pagenumbering{arabic}}
 
 % Don't  print apage number
-\newenvironment{dontprintpage}
-{\thispagestyle{empty}}
+%\newenvironment{dontprintpage}
+%{\thispagestyle{empty}}
 
 %  Turns off hyphenation of words across multiple lines
 \usepackage[none]{hyphenat}
@@ -34,3 +34,23 @@
 
 % Quotations
 \usepackage{dirtytalk}
+
+%%%%%%%%%%%%% Cover Environment %%%%%%%%%%%%%
+
+\addtolength{\oddsidemargin}{-0.15in}
+\addtolength{\evensidemargin}{-1.07in}
+\addtolength{\textwidth}{1.2in}
+\addtolength{\topmargin}{-.875in}
+\addtolength{\textheight}{1.75in}
+
+% Cover Environment
+\def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
+\let\endchangemargin=\endlist
+
+% Used for generating the cover
+\usepackage{multirow}
+\usepackage{booktabs}
+
+% Images
+\usepackage{graphicx}
+\graphicspath{{pics/}}
