--- a/parameters/preamble.tex
+++ b/parameters/preamble.tex
@@ -19,8 +19,8 @@
 {\pagenumbering{arabic}}
 
 % Don't  print apage number
-%\newenvironment{dontprintpage}
-%{\thispagestyle{empty}}
+\newenvironment{dontprintpagenumber}
+{\pagestyle{empty}}
 
 %  Turns off hyphenation of words across multiple lines
 \usepackage[none]{hyphenat}
