--- a/index.Rmd
+++ b/index.Rmd
@@ -88,3 +88,7 @@ tribble(
   kable(booktabs = T) %>% 
   column_spec(1, bold = T)
 ```
+
+\begin{dontprintpagenumber}
+\includepdf[pages=1, pagecommand={}]{pages/01_cover.pdf}
+\end{dontprintpagenumber}
